# routes/usuarioRoute.js
@@ -1,8 +1,7 @@
 import express from 'express';
 import UsuarioController from '../controllers/usuarioController.js';
 import auth from "../middlewares/auth.js";
-import { somenteAdmin } from "../middlewares/somenteAdmin.js";
-import { somenteCliente } from "../middlewares/somenteCliente.js";
+import  somenteAdmin  from "../middlewares/somenteAdmin.js";
 const router = express.Router();
 
 const controladora = new UsuarioController();
@@ -34,6 +33,16 @@ router.patch("/:id/inativar", auth, somenteAdmin, (req, res) => {
     controladora.inativarUsuario(req, res);
 })
 
+router.patch("/:id/ativar", auth, somenteAdmin, (req, res) => {
+    /* #swagger.security = [{
+        "jwt": []
+    }] */
+    //#swagger.tags = ['Usuarios']
+    //#swagger.summary = 'Ativar um usuario atraves do seu ID'
+    controladora.ativar(req, res)
+});
+
+
 router.post("/login", (req, res) => {
     //#swagger.tags = ['Usuarios']
     //#swagger.summary = 'Realiza login do usuario'
@@ -58,21 +67,21 @@ router.put("/:id",auth, somenteAdmin, (req, res) => {
 })
 
 router.get("/:id", (req, res) => {
+    /* #swagger.security = [{
+            "jwt": []
+    }] */
      //#swagger.tags = ['Usuarios']
      //#swagger.summary = 'Busca um usuario especifico pelo seu ID'
     controladora.obter(req, res);
 })
 
 router.delete("/:id", auth, somenteAdmin, (req, res) => {
-  //#swagger.tags = ['Usuarios']
-  //#swagger.summary = ['Deletar um usuario identificado pelo ID']
-  controladora.deletar(req, res);
-})
-
-router.get("/logado", auth, (req, res) => {
+    /* #swagger.security = [{
+        "jwt": []
+    }] */
     //#swagger.tags = ['Usuarios']
-    //#swagger.summary = ['Consultar o próprio usuário']
-    controladora.usuarioLogado(req, res);
+    //#swagger.summary = ['Deletar um usuario identificado pelo ID']
+    controladora.deletar(req, res);
 })
 
 export default router;
