# swagger-output.json
@@ -22,12 +22,6 @@
           "200": {
             "description": "OK"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
           "404": {
             "description": "Not Found"
           },
@@ -80,7 +74,7 @@
         "tags": [
           "Usuarios"
         ],
-        "summary": "['Consultar o próprio usuário']",
+        "summary": "Retorna uma lista de todos os usuarios logados",
         "description": "",
         "responses": {
           "200": {
@@ -119,11 +113,43 @@
           "400": {
             "description": "Bad Request"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
           "403": {
             "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "jwt": []
+          }
+        ]
+      }
+    },
+    "/usuario/{id}/ativar": {
+      "patch": {
+        "tags": [
+          "Usuarios"
+        ],
+        "summary": "Ativar um usuario atraves do seu ID",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
           "404": {
             "description": "Not Found"
@@ -223,12 +249,6 @@
           "400": {
             "description": "Bad Request"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
           "404": {
             "description": "Not Found"
           },
@@ -297,7 +317,12 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "jwt": []
+          }
+        ]
       },
       "delete": {
         "tags": [
@@ -322,19 +347,18 @@
           "400": {
             "description": "Bad Request"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
           "404": {
             "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "jwt": []
+          }
+        ]
       }
     },
     "/categoria/cadastrar": {
@@ -539,7 +563,7 @@
         "tags": [
           "Manual"
         ],
-        "summary": "Cadastrar",
+        "summary": "Cadastrar Manual",
         "description": "",
         "responses": {
           "201": {
@@ -571,9 +595,6 @@
                   },
                   "catID": {
                     "example": "any"
-                  },
-                  "manChaveR2": {
-                    "example": "any"
                   }
                 }
               }
@@ -587,7 +608,7 @@
         "tags": [
           "Manual"
         ],
-        "summary": "Listar",
+        "summary": "Listar Manual",
         "description": "",
         "parameters": [
           {
@@ -621,7 +642,7 @@
         "tags": [
           "Manual"
         ],
-        "summary": "Excluir",
+        "summary": "Excluir Manual",
         "description": "",
         "parameters": [
           {
@@ -659,7 +680,7 @@
         "tags": [
           "Manual"
         ],
-        "summary": "Modificar",
+        "summary": "Modificar Manual",
         "description": "",
         "parameters": [
           {
@@ -723,7 +744,7 @@
         "tags": [
           "Manual"
         ],
-        "summary": "Buscar",
+        "summary": "Buscar Manual",
         "description": "",
         "parameters": [
           {
@@ -806,12 +827,6 @@
           },
           "400": {
             "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
           },
           "500": {
             "description": "Internal Server Error"
@@ -968,12 +983,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
           },
           "404": {
             "description": "Not Found"
